lua-factory: Make containers match any supported_media

Individually, containers are not likely to represent all 3 of
images/audio/video types at once, it feels a bit backwards that
lua plugins must use "all" in order to provide information for
containers.

Fixes album cover fetching on gnome-music after the port to
grilo 0.3.

https://bugzilla.gnome.org/show_bug.cgi?id=760378